--- a/academic/gg/gg.html
+++ b/academic/gg/gg.html
@@ -1,5 +1,11 @@
 <!-- my-page.html --> 
 <script src="https://rawcdn.githack.com/oscarmorrison/md-page/232e97938de9f4d79f4110f6cfd637e186b63317/md-page.js"></script><noscript>
 
-asfsdf
-h
+
+
+# 그래픽
+
+## 목록
+
+- [01_sdlkfasldjk.md](./01_sdlkfasldjk.md)
+- [02_asflsd.md](./02_asflsd.md)
